@@ -18,17 +18,6 @@
 #ifndef   _WX_FILENAME_H_
 #define   _WX_FILENAME_H_
 
-/*
-    TODO:
-
-    1. support for drives under Windows
-    2. more file operations:
-        a) chmod()
-        b) [acm]time() - get and set
-        c) rename()?
-    3. SameFileAs() function to compare inodes under Unix
- */
-
 #include "wx/arrstr.h"
 #include "wx/filefn.h"
 #include "wx/datetime.h"
@@ -271,6 +260,10 @@ public:
 
     bool IsFileExecutable() const { return wxIsExecutable(GetFullPath()); }
     static bool IsFileExecutable(const wxString &path) { return wxFileExists(path) && wxIsExecutable(path); }
+
+        // set the file permissions to a combination of wxPosixPermissions enum
+        // values
+    bool SetPermissions(int permissions);
 
 
     // time functions
